--- a/adminfront/index.html
+++ b/adminfront/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <script type="text/javascript" src="/static/live2dw/lib/L2Dwidget.min.js"></script>
+<script
+        src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdn.bootcss.com/jqueryui/1.12.1/jquery-ui.js"></script>
+<style>
+  #live2d-widget {
+    pointer-events: auto !important;
+    cursor: pointer;
+  }
+</style>
 <html>
   <head>
     <meta charset="utf-8">
